<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_overall" android:title="@string/sort_overall"/>
            <item android:id="@+id/sort_name"    android:title="@string/sort_name"/>
            <item android:id="@+id/sort_kda"     android:title="@string/sort_kda"/>
            <item android:id="@+id/sort_cs"      android:title="@string/sort_cs"/>
            <item android:id="@+id/sort_salary"  android:title="@string/sort_salary"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_change_team"
        android:title="@string/change_team"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>
